color changes and add window styling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 			<canvas id="citycanvas" width="2000"></canvas>
 			<script src="citygencvs.js"></script>
 
-			<div class="title">myaumyau.dotdev
+			<div class="window window1">
+				<div class="windowhead">
+					<div class="minimize button"></div>
+					<div class="maximize button"></div>
+					<div class="close button"></div>
+				</div>
+			</div>
+
+			<div class="dark-overlay">myaumyau.dotdev
 				<script>
 					(()=>{
 						const title = document.currentScript.parentElement;
