--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 
 			<div class="window window1">
 				<div class="windowhead">
-					<div class="minimize button"></div>
-					<div class="maximize button"></div>
-					<div class="close button"></div>
+					<img class="icon" src="icon.png"></img>
+					<div class="title">myaumyau.exe</div>
+					<div class="minimize button">0</div>
+					<div class="maximize button">1</div>
+					<div class="close button">r</div>
 				</div>
 			</div>
 
