--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
 				</div>
 			</div>
 
+			<div class="window window2">
+				<div class="windowhead">
+					<img class="icon" src="icon.png"></img>
+					<div class="title">dotdev.exe</div>
+					<div class="minimize button">0</div>
+					<div class="maximize button">1</div>
+					<div class="close button">r</div>
+				</div>
+			</div>
+
 			<div class="dark-overlay">myaumyau.dotdev
 				<script>
 					(()=>{
@@ -32,10 +42,12 @@
 							if(i > titletext.length) return;
 							setTimeout(typeChar,200);
 						}
-						setTimeout(typeChar, 400);
+						setTimeout(typeChar, 1400);
 					})();
 				</script>
 			</div>
 		</div>
+
+		<script src="windows.js"></script>
 	</body>
 </html>
