--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
 			</div>
 		</div>
 
+		<div class="page page2">
+		</div>
+
+		<div class="page page3">
+		</div>
+
 		<script src="windows.js"></script>
+		<script src="scroll.js"></script>
 	</body>
 </html>
