--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="page.css" />
+		<link rel="stylesheet" type="text/css" href="page2.css" />
 	</head>
 	<body>
 		<div class="page page1">
@@ -49,6 +50,15 @@
 		</div>
 
 		<div class="page page2">
+			<div class="wall">
+				<div class="garagedoor"></div>
+			</div>
+			<div class="v1"></div>
+			<div class="v2"></div>
+
+			<div class="credit"><a href="https://www.instagram.com/p/B9zbEp-qdCE/?utm_source=ig_web_copy_link">credit: ig @surudenise</a></div>
+
+			<img class="ref" src="https://i.pinimg.com/736x/89/1f/90/891f902d649ad0fe2de006ee2946335b.jpg"></img>
 		</div>
 
 		<div class="page page3">
