--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 			</div>
 			<div class="v1"></div>
 			<div class="v2"></div>
+			
+			<div class="postcontainer"></div>
 
 			<div class="portico"></div>
 
