add machine details

--- a/index.html
+++ b/index.html
@@ -53,12 +53,24 @@
 			<div class="wall">
 				<div class="garagedoor"></div>
 			</div>
-			<div class="v1"></div>
-			<div class="v2"></div>
+			<div class="v1">
+				<div class="mainwindow">
+				</div>
+				<div class="droparea">
+				</div>
+			</div>
+			<div class="v2">
+				<div class="mainwindow">
+				</div>
+				<div class="droparea">
+				</div>
+			</div>
 			
 			<div class="postcontainer"></div>
 
 			<div class="portico"></div>
+
+			<div class="floor"></div>
 
 			<!--<div class="credit"><a href="https://www.instagram.com/p/B9zbEp-qdCE/?utm_source=ig_web_copy_link">credit: ig @surudenise</a></div>-->
 
