--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
 		<div class="page page2">
 			<div class="wall">
 				<div class="garagedoor"></div>
+				<div class="v1shadow">
+				</div>
+				<div class="v2shadow">
+				</div>
+				<div class="pshadow">
+				</div>
 			</div>
 			<div class="v1">
 				<div class="mainwindow">
@@ -59,6 +65,7 @@
 				<div class="droparea">
 				</div>
 			</div>
+
 			<div class="v2">
 				<div class="mainwindow">
 				</div>
@@ -70,7 +77,10 @@
 
 			<div class="portico"></div>
 
-			<div class="floor"></div>
+			<div class="floor">
+				<div class="vshadow">
+				</div>
+			</div>
 
 			<!--<div class="credit"><a href="https://www.instagram.com/p/B9zbEp-qdCE/?utm_source=ig_web_copy_link">credit: ig @surudenise</a></div>-->
 
