--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 				</div>
 				<div class="pshadow">
 				</div>
+				<div class="postshadow"></div>
 				<div class="credit"><a href="https://www.instagram.com/p/B9zbEp-qdCE/?utm_source=ig_web_copy_link">credit: ig @surudenise</a></div>
 			</div>
 			<div class="v1">
@@ -79,8 +80,8 @@
 			<div class="portico"></div>
 
 			<div class="floor">
-				<div class="vshadow">
-				</div>
+				<div class="vshadow"></div>
+				<div class="pshadow"></div>
 			</div>
 
 			<!--<img class="ref" src="https://i.pinimg.com/736x/89/1f/90/891f902d649ad0fe2de006ee2946335b.jpg"></img>-->
