--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 			</div>
 			<div class="v1">
 				<div class="mainwindow">
+					<div class="shade"></div>
 				</div>
 				<div class="droparea">
 				</div>
@@ -69,12 +70,13 @@
 
 			<div class="v2">
 				<div class="mainwindow">
+					<div class="shade"></div>
 				</div>
 				<div class="droparea">
 				</div>
 			</div>
 			
-			<div class="postcontainer"></div>
+			<div class="postcontainer"><div class="posttext">POST</div></div>
 
 			<div class="portico"></div>
 
