Add mainwindow grid

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
 			<div class="v1">
 				<div class="mainwindow">
 					<div class="shade"></div>
+					<div class="dummy"></div>
+					<div class="dummy"></div>
 				</div>
 				<div class="droparea">
 				</div>
