--- a/index.html
+++ b/index.html
@@ -17,6 +17,58 @@
 					<div class="maximize button">1</div>
 					<div class="close button">r</div>
 				</div>
+				<div class="window-content">
+					<div class="center title">
+						myaumyau.dotdev
+					</div>
+					<div class="center">
+						i'm an 18 year old developer who enjoys problem-solving
+					</div>
+					<div class="center">
+						<a href="https://github.com/2myaus">github</a>
+						<span style="width:10vw;display:inline-block;"></span>
+						<a href="mailto:myaumyau@myaumyau.dev ">email</a>
+					</div>
+					<div class="subdivider"></div>
+					<div class="center subtitle">
+						about me
+					</div>
+					<div class="col-layout">
+						<div class="content-col content-text">
+							<div class="center subtitle">
+								who i am
+							</div>
+							<div class="subdivider"></div>
+							I am myaumyau, a self-taught programmer.
+						</div>
+						<div class="content-col content-text">
+							<div class="center subtitle">
+								code i know
+							</div>
+							<div class="subdivider"></div>
+							<div class="col-layout">
+								<div class="content-col">
+									- C / C++ <br/>
+									- C# <br/>
+									- Javascript <br/>
+									- HTML/CSS <br/>
+									- Python <br/>
+									- Java <br/>
+									- PHP
+								</div>
+								<div class="content-col">
+									- Lua <br/>
+									- Rust <br/>
+									- SQL <br/>
+									- Ruby <br/>
+									- Golang <br/>
+									- Dart <br/>
+									- Swift
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 
 			<div class="window window2">
