--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 								who i am
 							</div>
 							<div class="subdivider"></div>
-							I am myaumyau, a self-taught programmer.
+							I am myaumyau, a self-taught programmer. Coding has been a favorite hobby of mine since accidentally discovering web code as a child, and I now appreciate the logical thinking and problem-solving skills that I've learned in the time since then. I'm now a freshman at Northeastern University studying computer science in Boston.
 						</div>
 						<div class="content-col content-text">
 							<div class="center subtitle">
@@ -48,25 +48,27 @@
 							<div class="subdivider"></div>
 							<div class="col-layout">
 								<div class="content-col">
-									- C / C++ <br/>
-									- C# <br/>
-									- Javascript <br/>
-									- HTML/CSS <br/>
-									- Python <br/>
-									- Java <br/>
-									- PHP
+									C / C++ <br/>
+									Javascript <br/>
+									HTML/CSS
 								</div>
 								<div class="content-col">
-									- Lua <br/>
-									- Rust <br/>
-									- SQL <br/>
-									- Ruby <br/>
-									- Golang <br/>
-									- Dart <br/>
-									- Swift
+									C# <br/>
+									Java <br/>
+									Python
 								</div>
 							</div>
+							<div class="subdivider"></div>
+							...but, I've worked on various small projects in more languages than I can remember. I personally see the thinking skills behind coding as much more important than syntactical knowledge of any one specific language.
 						</div>
+					</div>
+					<div class="content-text">
+						<div class="subdivider"></div>
+						<div class="center subtitle">
+							my philosophy
+						</div>
+						<div class="subdivider"></div>
+						In my opinion, the most important part of any skill is being able to break down problems into small, quickly solvable pieces. 
 					</div>
 				</div>
 			</div>
