Add desktop icons

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
 			<canvas id="citycanvas" width="2000"></canvas>
 			<script src="citygencvs.js"></script>
 
+			<div class="desktop">
+				<div class="desktop-item" itemdroppedon="draggedOntoRecycleBin()" style="grid-area: 1 / 1;">
+					<img src="icon.png" class="desktop-item-icon">
+					<div class="desktop-item-label">Recycle Bin</div>
+				</div>
+				<div class="desktop-item">
+					<img src="icon.png" class="desktop-item-icon">
+					<div class="desktop-item-label">My Computer</div>
+				</div>
+			</div>
+
 			<div class="window window1">
 				<div class="windowhead">
 					<img class="icon" src="icon.png"></img>
@@ -101,6 +112,7 @@
 				</script>
 			</div>
 		</div>
+		<script src="desktop.js"></script>
 		<script src="windows.js"></script>
 		<!--<script src="scroll.js"></script>-->
 	</body>
