--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				</div>
 			</div>
 
-			<div class="window window1">
+			<div class="window window1 noclose">
 				<div class="windowhead">
 					<img class="icon" src="icon.png"></img>
 					<div class="title">myaumyau.exe</div>
@@ -84,7 +84,7 @@
 				</div>
 			</div>
 
-			<div class="window window2">
+			<div class="window window2 noclose">
 				<div class="windowhead">
 					<img class="icon" src="icon.png"></img>
 					<div class="title">dotdev.exe</div>
