add icons and reorganize

--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 
 			<div class="desktop">
 				<div class="desktop-item" itemdroppedon="draggedOntoRecycleBin()" style="grid-area: 1 / 1;">
-					<img src="icon.png" class="desktop-item-icon">
+					<img src="assets/icon_trash_can.png" class="desktop-item-icon">
 					<div class="desktop-item-label">Recycle Bin</div>
 				</div>
 				<div class="desktop-item">
-					<img src="icon.png" class="desktop-item-icon">
+					<img src="assets/icon_search.png" class="desktop-item-icon">
 					<div class="desktop-item-label">My Computer</div>
 				</div>
 			</div>
 
 			<div class="window window1 noclose">
 				<div class="windowhead">
-					<img class="icon" src="icon.png"></img>
+					<img class="icon" src="assets/icon.png"></img>
 					<div class="title">myaumyau.exe</div>
 					<div class="minimize button">0</div>
 					<div class="maximize button">1</div>
@@ -86,7 +86,7 @@
 
 			<div class="window window2 noclose">
 				<div class="windowhead">
-					<img class="icon" src="icon.png"></img>
+					<img class="icon" src="assets/icon.png"></img>
 					<div class="title">dotdev.exe</div>
 					<div class="minimize button">0</div>
 					<div class="maximize button">1</div>
