--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="page.css" />
+		<link rel="stylesheet" type="text/css" href="css/page.css" />
 	</head>
 	<body>
 		<div class="page page1">
 			<canvas id="lightingcanvas" width="2000"></canvas>
 			<canvas id="citycanvas" width="2000"></canvas>
-			<script src="citygencvs.js"></script>
+			<script src="js/citygencvs.js"></script>
 
 			<div class="desktop">
 				<div class="desktop-item" itemdroppedon="draggedOntoRecycleBin()" style="grid-area: 1 / 1;">
@@ -112,8 +112,9 @@
 				</script>
 			</div>
 		</div>
-		<script src="desktop.js"></script>
-		<script src="windows.js"></script>
-		<!--<script src="scroll.js"></script>-->
+		<script src="js/apps.js"></script>
+		<script src="js/desktop.js"></script>
+		<script src="js/windows.js"></script>
+		<!--<script src="js/scroll.js"></script>-->
 	</body>
 </html>
