--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<title>myaumyaudotdev</title>
 		<link rel="stylesheet" type="text/css" href="css/page.css" />
 	</head>
 	<body>
@@ -30,10 +31,10 @@
 				</div>
 				<div class="window-content">
 					<div class="center title">
-						myaumyau.dotdev
+						myaumyau-dotdev
 					</div>
 					<div class="center">
-						i'm an 18 year old developer who enjoys problem-solving
+						the webpage of a basic 18 year-old developer and engineer
 					</div>
 					<div class="center">
 						<a href="https://github.com/2myaus">github</a>
@@ -42,15 +43,18 @@
 					</div>
 					<div class="subdivider"></div>
 					<div class="center subtitle">
-						about me
+						about myaumyau
 					</div>
 					<div class="col-layout">
 						<div class="content-col content-text">
 							<div class="center subtitle">
-								who i am
+								who are u
 							</div>
 							<div class="subdivider"></div>
-							I am myaumyau, a self-taught programmer. Coding has been a favorite hobby of mine since accidentally discovering web code as a child, and I now appreciate the logical thinking and problem-solving skills that I've learned in the time since then. I'm now a freshman at Northeastern University studying computer science in Boston.
+							hi, this website was written by myaumyau. i like to show off cool code sometimes, which is why this website is here (at least for now).
+
+							i'm an american student currently living in boston and attending northeastern university.
+
 						</div>
 						<div class="content-col content-text">
 							<div class="center subtitle">
@@ -59,27 +63,27 @@
 							<div class="subdivider"></div>
 							<div class="col-layout">
 								<div class="content-col">
-									C / C++ <br/>
-									Javascript <br/>
-									HTML/CSS
+									c / c++ <br/>
+									javascript <br/>
+									html/css
 								</div>
 								<div class="content-col">
-									C# <br/>
-									Java <br/>
-									Python
+									c# <br/>
+									java <br/>
+									python
 								</div>
 							</div>
 							<div class="subdivider"></div>
-							...but, I've worked on various small projects in more languages than I can remember. I personally see the thinking skills behind coding as much more important than syntactical knowledge of any one specific language.
+							<div class="subdivider"></div>
+							can you really define someone's mind by a set of six labels?
+							i like the feel of low-level languages, but i don't really mind using something more suited to whatever task i have.
+							thank you for reading this philosophy lesson by myau myau
 						</div>
 					</div>
-					<div class="content-text">
-						<div class="subdivider"></div>
-						<div class="center subtitle">
-							my philosophy
+					<div class="content-text" style="position:absolute;bottom:0vw;left:50%;transform:translateX(-50%);width:80%;">
+						<div class="center">
+							this site was made in html/css/js by myaumyau
 						</div>
-						<div class="subdivider"></div>
-						In my opinion, the most important part of any skill is being able to break down problems into small, quickly solvable pieces.
 					</div>
 				</div>
 			</div>
@@ -92,9 +96,36 @@
 					<div class="maximize button">1</div>
 					<div class="close button">r</div>
 				</div>
+				<div class="window-content">
+					<div class="center title">
+						myaumyau-network
+					</div>
+					<div class="col-layout">
+						<div class="content-col center">
+							<div class="center subtitle">play these cool games i made</div>
+							<div class="subdivider"></div>
+							<div class="subdivider"></div>
+							<a href="https://proto.myaumyau.dev/misc/bagt">bad asteroid game thing</a>
+							<div class="subdivider"></div>
+							<a href="https://proto.myaumyau.dev/misc/doodleswing/">doodle swing</a>
+							<div class="subdivider"></div>
+							<a href="https://proto.myaumyau.dev/misc/factorygame/">factory game</a>
+							<div class="subdivider"></div>
+							(i promise i'll get around to adding thumbnails some day)
+						</div>
+						<div class="center content-col">
+							<div class="center subtitle">or see some other websites by me</div>
+							<div class="subdivider"></div>
+							<div class="subdivider"></div>
+							<a href="https://proto.myaumyau.dev/misc/fail">myaumyau.fail</a>
+							<div class="subdivider"></div>
+							(and i promise i'll add more websites soon. okay?)
+						</div>
+					</div>
+				</div>
 			</div>
 
-			<div class="dark-overlay">myaumyau.dotdev
+			<div class="dark-overlay">myaumyau-dotdev
 				<script>
 					(()=>{
 						const title = document.currentScript.parentElement;
