Add link to old website

--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
 							<div class="subdivider"></div>
 							<a href="https://proto.myaumyau.dev/misc/fail">myaumyau.fail</a>
 							<div class="subdivider"></div>
+							<a href="https://myaumyau.dev/2myaus.github.io_OLD/">the old myaumyau.dev</a>
+							<div class="subdivider"></div>
 							(and i promise i'll add more websites soon. okay?)
 						</div>
 					</div>
