--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 						myaumyau-dotdev
 					</div>
 					<div class="center">
-						the webpage of a basic 18 year-old developer and engineer
+						the webpage of a basic 19 year-old developer and engineer
 					</div>
 					<div class="center">
 						<a href="https://github.com/2myaus">github</a>
 						<span style="width:10vw;display:inline-block;"></span>
-						<a href="mailto:myaumyau@myaumyau.dev ">email</a>
+						<!-- <a href="mailto:myaumyau@myaumyau.dev ">email</a> -->
 					</div>
 					<div class="subdivider"></div>
 					<div class="center subtitle">
