--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 				<div class="center">
 					<a href="https://github.com/2myaus">github</a>
 					<span style="width:10vw;display:inline-block;"></span>
+					<a href="https://www.linkedin.com/in/petrovda">linkedin</a>
 					<!-- <a href="mailto:myaumyau@myaumyau.dev ">email</a> -->
 				</div>
 				<div class="subdivider"></div>
@@ -50,38 +51,38 @@
 				<div class="col-layout">
 					<div class="content-col content-text">
 						<div class="center subtitle">
-							who are u
+							who is this
 						</div>
 						<div class="subdivider"></div>
-						hi, this website was written by myaumyau. i like to show off cool code sometimes, which is why this website
-						is here (at least for now).
-
-						i'm an american student currently living in boston and attending northeastern university.
-
+						i am an american student attending northeastern university for computer engineering.
+						i like to show off cool code sometimes, which is why this website is here (at least for now).
+						i can code software and simple websites but recently (upon becoming a university student)
+						have started specializing in hardware and embedded development (see trinkets)
 					</div>
 					<div class="content-col content-text">
 						<div class="center subtitle">
-							code i know
+							maybe useful skills
 						</div>
 						<div class="subdivider"></div>
 						<div class="col-layout">
-							<div class="content-col">
+							<div class="content-col" style="text-align:right">
 								c / c++ <br />
+								vhdl <br />
+								systemverilog <br />
 								javascript <br />
-								html/css
 							</div>
 							<div class="content-col">
 								c# <br />
 								java <br />
-								python
+								python <br />
+								html / css
 							</div>
 						</div>
 						<div class="subdivider"></div>
 						<div class="subdivider"></div>
-						can you really define someone's mind by a set of six labels?
-						i like the feel of low-level languages, but i don't really mind using something more suited to whatever task
-						i have.
-						thank you for reading this philosophy lesson by myau myau
+						i'm comfortable learning any languages/tools for a project if they fit it well or are needed.
+						i've used many more than are listed here to limited extents but have put the ones that i am
+						most skilled with and would choose first when developing a project in their respective scopes
 					</div>
 				</div>
 				<div class="content-text" style="position:absolute;bottom:0vw;left:50%;transform:translateX(-50%);width:80%;">
@@ -102,14 +103,10 @@
 			</div>
 			<div class="window-content">
 				<div class="center title">
-					myaumyau-network
+					myaumyau-trinkets
 				</div>
 				<div class="col-layout">
 					<div class="content-col center">
-						<div class="center subtitle">
-							the myaumyau network is currently cooked because i didn't want to renew my domain. come back later for
-							treats
-						</div>
 						<!-- <div class="center subtitle">play these cool games i made</div>
 							<div class="subdivider"></div>
 							<div class="subdivider"></div>
@@ -135,24 +132,23 @@
 					</div>
 				</div>
 			</div>
-
-			<div class="dark-overlay">myaumyau-dotdev
-				<script>
-					(() => {
-						const title = document.currentScript.parentElement;
-						const titletext = title.innerText;
-						let i = 0;
-						title.innerText = "";
-						const typeChar = () => {
-							i++;
-							title.innerText = titletext.substring(0, i);
-							if (i > titletext.length) return;
-							setTimeout(typeChar, 200);
-						}
-						setTimeout(typeChar, 1400);
-					})();
-				</script>
-			</div>
+		</div>
+		<div class="dark-overlay">myaumyau-dotdev
+			<script>
+				(() => {
+					const title = document.currentScript.parentElement;
+					const titletext = title.innerText;
+					let i = 0;
+					title.innerText = "";
+					const typeChar = () => {
+						i++;
+						title.innerText = titletext.substring(0, i);
+						if (i > titletext.length) return;
+						setTimeout(typeChar, 200);
+					}
+					setTimeout(typeChar, 1400);
+				})();
+			</script>
 		</div>
 		<script src="js/apps.js"></script>
 		<script src="js/desktop.js"></script>
