--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/page.css" />
 	<link rel="preload" href="css/pace.css" />
 	<link rel="preload" href="assets/nso_sad.webp" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
 <body>
