--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+	<!-- look how many divs there are lmaoo -->
 	<div class="page page1">
 		<canvas id="lightingcanvas" width="2000"></canvas>
 		<canvas id="citycanvas" width="2000"></canvas>
@@ -60,7 +61,7 @@
 						i like to show off cool code sometimes, which is why this website is here (at least for now).
 						i can code software and simple websites but recently (upon becoming a university student)
 						have started specializing in hardware and embedded development (see trinkets).
-						my legal name is daniil if you need that for a reason
+						my legal name is daniil
 					</div>
 					<div class="content-col content-text">
 						<div class="center subtitle">
@@ -85,12 +86,7 @@
 						<div class="subdivider"></div>
 						i'm comfortable learning any languages/tools for a project if they fit it well or are needed.
 						i've used many more than are listed here to limited extents but have put the ones that i am
-						most skilled with and would choose first when developing a project in their respective scopes
-					</div>
-				</div>
-				<div class="content-text" style="position:absolute;bottom:0vw;left:50%;transform:translateX(-50%);width:80%;">
-					<div class="center">
-						this site was made in html/css/js by 2myaus
+						most skilled with. i would choose these first when developing a project
 					</div>
 				</div>
 			</div>
