--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<img src="assets/icon_trash_can.png" class="item-icon">
 				<div class="item-label">Recycle Bin</div>
 			</div>
-			<div class="item" onDoubleClick="createFileBrowser('10vw', '10vw', '/');">
+			<div class="item" ondblclick="createFileBrowser('10vw', '10vw', '/');" style="grid-area: 2 / 1;">
 				<img src="assets/icon_search.png" class="item-icon">
 				<div class="item-label">My Computer</div>
 			</div>
