--- a/index.html
+++ b/index.html
@@ -123,6 +123,12 @@
 						for broadcasted packets and keeps track of who sent them.
 						it was named for fun and not for a resume but here we are.
 						<div class="subdivider"></div>
+						<a href="assets/random/robot-dog.pdf">robot dog thing</a><br />
+						i designed this robot dog as my final project in my 3rd year of studying drafting
+						& design in high school. the project was about product designs so i unfortunately
+						never built this design for real, but it is an okay demonstration of some of my
+						cad abilities.
+						<div class="subdivider"></div>
 						<!-- (i promise i'll get around to adding thumbnails some day) -->
 						<!-- who wrote that.. what an empty promise -->
 					</div>
